# WildfireDetection

./: README.md  rename.sh
CaptureSoftware/: CMakeLists.txt  README.md
CaptureSoftware/include/: Camera.hpp
ExperimentSetup/: README.md
ImageProcessing/BinaryClassification/: BinaryClassification.ipynb  Clean_dataset.ipynb  README.md  separateAltitude.py
ImageProcessing/TemperatureVSDistance/: README.md  data-3-16-22-avg.csv  readImage.py
capture/include/: ThermalCamera.hpp
capture/src/: ThermalCamera.cpp  calibration.cpp
imageProcessing/: data-3-16-22.csv  data.csv  focused.csv  readImage.py  unfocused.csv
imageProcessing/Unet/: Clean_dataset.ipynb  Readme.txt  my_alg.py
